# regression-analysis

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  iterations.tsv  program.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: asset_router.py  inline_worker.py  job_store.py  main.py  orchestration.py  queue_backends.py  service.py  snapshot_service.py
apps/shared/: __init__.py  contracts.py  execution.py
apps/web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/lib/: api.ts  field_localizer.ts
apps/worker/: runner.py
data/providers/: cn_prices.csv  crypto_prices.csv  fx_rates.csv  us_prices.csv
docs/: assumptions.md  deployment-web-api-worker.md
docs/superpowers/plans/: 2026-03-27-ui-redesign.md  2026-03-31-fix-main-flow-blockers.md
docs/superpowers/specs/: 2026-03-27-ui-redesign-design.md  2026-03-31-fix-main-flow-blockers-design.md  2026-03-31-ux-polish-design.md
openspec/changes/add-multi-market-provider-router/: tasks.md  (+2 more)
scripts/: dev_down.sh  dev_up.sh  seed_crypto_csv.py
src/portfolio_lab/: __init__.py  analysis.py  backtest.py  construction.py  data_adapters.py  errors.py  models.py  universe.py
tests/: test_akshare_providers.py  test_asset_router.py  test_asset_search.py  test_binance_provider.py  test_friday_alignment.py  test_golden_cases.py  test_portfolio_lab.py  test_price_tolerance.py  test_snapshot_service.py  test_web_api_worker_stack.py
tests/fixtures/: mixed_currency_dataset.json
(+44 files in other folders)
