[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-lab"
version = "0.1.0"
description = "Offline-first portfolio backtesting lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["akshare", "requests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
