[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-lab"
version = "0.1.0"
description = "Offline-first portfolio backtesting lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
    "yfinance>=0.2",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "redis>=5.0",
]

[project.optional-dependencies]
akshare = ["akshare>=1.10"]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
